--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+:root {
+  --color-accent: #8e793e;
+  --color-light-accent: #ad974f;
+  --color-background: #231f20;
+  --color-text: #eaeaea;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +18,36 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background: rgb(27, 24, 25);
+  background: linear-gradient(
+    90deg,
+    rgba(27, 24, 25, 1) 0%,
+    rgba(35, 31, 32, 1) 50%,
+    rgba(27, 24, 25, 1) 100%
+  );
+}
+
+.gold-text {
+  color: var(--color-accent);
+}
+
+.white-text {
+  color: var(--color-text);
+}
+
+/* Footer */
+.accent-footer {
+  height: 40px;
+  background: rgb(126, 104, 40);
+  background: linear-gradient(
+    90deg,
+    rgba(126, 104, 40, 1) 0%,
+    rgba(202, 179, 101, 1) 50%,
+    rgba(126, 104, 40, 1) 100%
+  );
+  -webkit-box-shadow: 0px -10px 25px 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0px -10px 25px 0px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px -10px 25px 0px rgba(0, 0, 0, 0.6);
 }
 
 #footer {
@@ -21,4 +58,27 @@
 
 .footerSpan {
   line-height: 60px;
+}
+
+/* Navigation Bar */
+.nav-bar {
+  height: 70px;
+}
+
+.accent-nav {
+  height: 40px;
+  background: rgb(126, 104, 40);
+  background: linear-gradient(
+    90deg,
+    rgba(126, 104, 40, 1) 0%,
+    rgba(202, 179, 101, 1) 50%,
+    rgba(126, 104, 40, 1) 100%
+  );
+  -webkit-box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.6);
+}
+
+.home-link {
+  color: var(--color-accent) !important;
 }
