--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 :root {
-  --color-accent: #8e793e;
-  --color-light-accent: #ad974f;
-  --color-background: #231f20;
-  --color-text: #eaeaea;
+  --dark-accent: #8e793e;
+  --light-accent: #ad974f;
+  --dark-color: #231f20;
+  --light-color: #eaeaea;
 }
 
 * {
@@ -28,11 +28,23 @@
 }
 
 .gold-text {
-  color: var(--color-accent);
+  color: var(--dark-accent);
 }
 
-.white-text {
-  color: var(--color-text);
+.light-background {
+  background-color: var(--light-color)
+}
+
+.light-text {
+  color: var(--light-color);
+}
+
+.dark-background {
+  background-color: var(--dark-color)
+}
+
+.dark-text {
+  color: var(--dark-color)
 }
 
 /* Footer */
@@ -80,5 +92,64 @@
 }
 
 .home-link {
-  color: var(--color-accent) !important;
+  color: var(--dark-accent) !important;
+}
+
+/* Form */
+.form-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.form-container {
+  position: relative;
+  background-color: var(--dark-color);
+  height: 400px;
+  width: 700px;
+  border: 4px solid var(--light-accent);
+  border-radius: 15px;
+  transform: skew(-7deg);
+}
+
+.form-ribbon {
+  position: absolute;
+  width: 300px;
+  height: 416px;
+  background-color: var(--light-color);
+  top: -12px;
+  left: 300px;
+  /* transform: skew(-7deg); */
+  border-radius: 4px 0px 4px 0px;
+}
+
+.form-ribbon:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -8px;
+  border-top: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 4px solid #c4c4c4;
+  border-left: 4px solid #c4c4c4;
+}
+
+.form-ribbon:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: -8px;
+  border-top: 4px solid #c4c4c4;
+  border-right: 4px solid #c4c4c4;
+  border-bottom: 4px solid transparent;
+  border-left: 4px solid transparent;
+}
+
+.contact-form {
+  position: absolute;
+  width: 250px;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
