added contact form text content

--- a/src/App.css
+++ b/src/App.css
@@ -119,9 +119,19 @@
   height: 416px;
   background-color: var(--light-color);
   top: -12px;
-  left: 300px;
-  /* transform: skew(-7deg); */
+  left: 340px;
   border-radius: 4px 0px 4px 0px;
+}
+
+.form-text {
+  position: absolute;
+  color: var(--light-accent);
+  width: 250px;
+  top: 20px;
+  left: 50px;
+  text-align: center;
+  font-size:22px;
+  line-height: 12px;
 }
 
 .form-ribbon:before {
