--- a/src/App.css
+++ b/src/App.css
@@ -192,16 +192,20 @@
 
 /* About */
 .about-container {
-  max-width: 1300px;
+  max-width: 800px;
+  border: 4px solid var(--light-accent);
+  border-radius: 15px;
+  transform: skew(-7deg);
+  padding: 25px;
 }
 
 .paragraph-font {
   font-size: 20px;
-  width: 800px;
+  width: 700px;
   text-align: center;
 }
 
 .unordered-list li {
-  margin: 10px 20px;
+  margin: 10px 20px 0px 30px;
   text-align: justify;
 }
