--- a/src/App.css
+++ b/src/App.css
@@ -209,3 +209,42 @@
   margin: 10px 20px 0px 30px;
   text-align: justify;
 }
+
+/* Home */
+.home-header {
+  line-height: .5;
+  margin-bottom: 30px;
+}
+
+.home-text {
+  margin: 15px 0px 20px;
+  font-size: 29.5px;
+  text-align: left;
+}
+
+.white-button {
+  font-size: 20px;
+  padding: 5px 8px;
+  width: 110px;
+  text-align: center;
+  margin: 10px 15px 0px 0px;
+  color: var(--light-color);
+  background-color: var(--dark-color);
+  border: 2px solid var(--light-color)
+}
+
+.gold-button {
+  font-size: 20px;
+  padding: 5px 8px;
+  width: 110px;
+  text-align: center;
+  margin: 10px 15px 0px 0px;
+  color: var(--light-accent);
+  background-color: var(--dark-color);
+  border: 2px solid var(--light-accent)
+}
+
+.home-right-section {
+  border-left: 2px solid var(--light-color);
+  padding-left: 40px;
+}
