--- a/src/App.css
+++ b/src/App.css
@@ -211,7 +211,23 @@
 }
 
 /* Home */
+.home-wrapper{
+  width: 800px;
+  border: 4px solid var(--light-accent);
+  border-radius: 15px;
+  transform: skew(-7deg);
+  padding-top: 50px;
+}
+
+.profile-picture {
+  margin: -90px 0 0 -10px;
+  height: 400px;
+  object-fit: cover;
+  transform: skew(7deg);
+}
+
 .home-header {
+  padding-top: 20px;
   line-height: .6;
   margin-bottom: 30px;
 }
@@ -220,6 +236,10 @@
   margin: 15px 0px 20px;
   font-size: 29.5px;
   text-align: left;
+}
+
+.home-right-section {
+  margin-top: -5px;
 }
 
 .white-button {
@@ -258,9 +278,4 @@
   color: var(--dark-color);
   background-color: var(--light-accent);
   font-weight: 500;
-}
-
-.home-right-section {
-  border-left: 2px solid var(--light-color);
-  padding-left: 40px;
 }
