--- a/src/App.css
+++ b/src/App.css
@@ -281,14 +281,17 @@
 }
 
 /* Projects */
-.project-title {
-  color: var(--light-accent);
-  text-align: center;
-  font-size: 22px;
-  margin: 20px;
+.project-wrapper {
+  display: flex;
 }
 
-.project-wrapper {
+.switch-icon {
+  color: var(--light-accent) !important;
+  font-size: 50px !important;
+  margin: auto 80px;
+}
+
+.project-container {
   width: 800px;
   height: 600px;
   border-radius: 15px;
@@ -296,8 +299,16 @@
   transform: skew(-7deg);
 }
 
+.project-title {
+  color: var(--light-accent);
+  text-align: center;
+  font-size: 26px;
+  margin: 15px;
+}
+
 .project-image {
   width: 100%;
+  height: 100%;
   border: 2px solid var(--light-color);
   border-radius: 5px;
 }
@@ -305,7 +316,6 @@
 .project-ribbon {
   position: absolute;
   width: 820px;
-  height: 416px;
   background-color: var(--light-color);
   left: -14px;
   border-radius: 4px 0px 4px 0px;
@@ -331,4 +341,12 @@
   border-right: 4px solid white;
   border-bottom: 4px solid transparent;
   border-left: 6px solid transparent;
+}
+
+.project-description {
+  position: absolute;
+  top: 455px;
+  font-size: 20px;
+  color: var(--light-color);
+  padding: 30px;
 }
