--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,10 @@
 }
 
 /* Navigation Bar */
+nav.navbar {
+  margin: 0 3%;
+}
+
 .nav-bar {
   height: 70px;
 }
@@ -108,7 +112,7 @@
 
   button.nav-button.navbar-toggler {
     position: absolute;
-    left: 95%;
+    right: 0;
   }
 
   .nav-menu-items {
@@ -254,40 +258,65 @@
 
 /* Home */
 .home-wrapper {
-  width: 90%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   border: 4px solid var(--light-accent);
   border-radius: 15px;
-  padding-top: 50px;
+  padding-top: 3vw;
   margin: auto;
 }
 
+.profile-mob {
+  width: 95%;
+  margin: -15vw 4% 0vw 1%;
+}
+
 .profile-picture {
+  margin-top: -5vw;
   width: 100%;
   object-fit: cover;
 }
 
+.home-mob {
+  text-align: center;
+  margin: 2vw auto 0;
+}
+
+.home-mob-header {
+  font-size: 4.5vw;
+  margin-bottom: 8vw;
+}
+
+.home-tablet {
+  display: none;
+}
+
 .home-header {
-  padding-top: 20px;
+  padding-top: 4%;
   line-height: 0.6;
-  margin-bottom: 30px;
+  margin-bottom: 5%;
+  font-size: 4.4vw;
+  text-align: center;
 }
 
 .home-text {
   margin: 15px 0px 20px;
-  font-size: 29.5px;
-  text-align: left;
+  font-size: 3.4vw;
 }
 
 .home-right-section {
-  margin: -5px 15px 0 0;
+  margin: auto;
+  padding: 0;
+  text-align: center;
 }
 
 .white-button {
-  font-size: 20px;
-  padding: 5px 8px;
-  width: 110px;
+  font-size: 5vw;
+  padding: 5px 0;
+  width: 25vw;
   text-align: center;
-  margin: 10px 15px 0px 0px;
+  margin: 5vw 0;
   color: var(--light-color);
   background-color: var(--dark-color);
   border: 2px solid var(--light-color);
@@ -302,11 +331,11 @@
 }
 
 .gold-button {
-  font-size: 20px;
-  padding: 5px 8px;
-  width: 110px;
+  font-size: 5vw;
+  padding: 5px 0px;
+  width: 25vw;
   text-align: center;
-  margin: 10px 15px 0px 0px;
+  margin: 5vw 2vw;
   color: var(--light-accent);
   background-color: var(--dark-color);
   border: 2px solid var(--light-accent);
@@ -320,11 +349,55 @@
   font-weight: 500;
 }
 
+@media (min-width: 600px) {
+  .home-wrapper {
+    width: 90%;
+    flex-direction: row;
+  }
+
+  .home-mob {
+    display: none;
+  }
+
+  .home-tablet {
+    display: block;
+  }
+
+  .home-right-section {
+    padding: 0 3vw 6vw 0;
+  }
+
+  .home-header {
+    font-size: 4vw;
+    text-align: left;
+  }
+
+  .home-text {
+    font-size: 3vw;
+    text-align: left;
+  }
+
+  .white-button {
+    font-size: 2.3vw;
+    padding: 5px 0;
+    width: 12vw;
+    margin: 10px 1vw 0px 0px;
+  }
+
+  .gold-button {
+    font-size: 2.3vw;
+    padding: 5px 0px;
+    width: 12vw;
+    margin: 10px 1vw 0px 0px;
+  }
+}
+
 @media (min-width: 992px) {
   .home-wrapper {
     height: 430px;
     width: 850px;
     transform: skew(-7deg);
+    padding-top: 50px;
   }
 
   .profile-picture {
@@ -335,8 +408,32 @@
     transform: skew(7deg);
   }
 
+  .home-header {
+    padding-top: 20px;
+    font-size: 45px;
+    margin-bottom: 30px;
+  }
+
+  .home-text {
+    margin: 15px 0px 20px;
+    font-size: 29.5px;
+    text-align: left;
+  }
+
   .home-right-section {
-    margin: 20px 15px 0 0;
+    margin: 15px 15px 0 0;
+  }
+
+  .white-button {
+    font-size: 20px;
+    width: 110px;
+    margin: 10px 10px 0px 0px;
+  }
+
+  .gold-button {
+    font-size: 20px;
+    width: 110px;
+    margin: 10px 10px 0px 0px;
   }
 }
 
