--- a/src/App.css
+++ b/src/App.css
@@ -238,22 +238,136 @@ nav.navbar {
 
 /* About */
 .about-container {
-  max-width: 800px;
+  width: 100%;
   border: 4px solid var(--light-accent);
   border-radius: 15px;
-  transform: skew(-7deg);
-  padding: 25px;
+  padding: 25px 2vw;
+  margin: auto;
+}
+
+.about-wrapper {
+  width: 95%;
+  margin: auto;
+}
+
+.about-header {
+  font-size: 7vw;
+}
+
+.skills-header {
+  font-size: 5vw;
 }
 
 .paragraph-font {
-  font-size: 20px;
-  width: 700px;
-  text-align: center;
+  font-size: 4.4vw;
+  text-align: justify;
 }
 
 .unordered-list li {
-  margin: 10px 20px 0px 30px;
+  font-size: 2.2vw;
+  margin: 10px 10px 0px 10px;
   text-align: justify;
+}
+
+.unordered-list {
+  display: none;
+}
+
+.unordered-list-mob {
+  display: none;
+}
+
+.unordered-list-mob-columns {
+  padding-left: 10px;
+  margin: 15px auto 0;
+}
+
+.unordered-list-smallest {
+  display: flex;
+  padding-left: 10px;
+  font-size: 4.5vw;
+}
+
+@media (min-width: 400px) {
+  .about-header {
+    font-size: 5.5vw;
+  }
+
+  .skills-header {
+    font-size: 4.4vw;
+  }
+
+  .paragraph-font {
+    font-size: 3.3vw;
+    text-align: justify;
+  }
+
+  .unordered-list-smallest {
+    display: none;
+  }
+
+  .unordered-list-mob {
+    display: flex;
+    font-size: 3vw;
+  }
+}
+
+@media (min-width: 600px) {
+  .about-container {
+    width: 90%;
+  }
+
+  .about-wrapper {
+    width: 90%;
+  }
+
+  .about-header {
+    font-size: 4.3vw;
+  }
+
+  .skills-header {
+    font-size: 3.2vw;
+  }
+
+  .paragraph-font {
+    font-size: 2.3vw;
+  }
+
+  .unordered-list {
+    display: block;
+  }
+
+  .unordered-list-mob {
+    display: none;
+  }
+}
+
+@media (min-width: 992px) {
+  .about-container {
+    width: 850px;
+    padding: 20px;
+    transform: skew(-7deg);
+  }
+
+  .about-header {
+    font-size: 40px;
+  }
+
+  .skills-header {
+    font-size: 30px;
+  }
+
+  .paragraph-font {
+    font-size: 20px;
+    width: 700px;
+    text-align: center;
+  }
+
+  .unordered-list li {
+    font-size: 19px;
+    margin: 10px 20px 0px 30px;
+    text-align: justify;
+  }
 }
 
 /* Home */
