--- a/src/App.css
+++ b/src/App.css
@@ -308,7 +308,7 @@ input {
     left: 340px;
     border-radius: 4px 0px 4px 0px;
   }
-  
+
   .form-text {
     position: absolute;
     color: var(--light-accent);
@@ -319,7 +319,7 @@ input {
     font-size: 22px;
     line-height: 12px;
   }
-  
+
   .form-ribbon:before {
     content: "";
     position: absolute;
@@ -330,7 +330,7 @@ input {
     border-bottom: 4px solid #c4c4c4;
     border-left: 4px solid #c4c4c4;
   }
-  
+
   .form-ribbon:after {
     content: "";
     position: absolute;
@@ -341,7 +341,7 @@ input {
     border-bottom: 4px solid transparent;
     border-left: 4px solid transparent;
   }
-  
+
   .contact-form {
     position: absolute;
     width: 250px;
@@ -349,23 +349,23 @@ input {
     left: 50%;
     transform: translate(-50%, -50%);
   }
-  
+
   .icon {
     color: var(--light-accent) !important;
     margin: 25px 15px;
     font-size: 45px !important;
   }
-  
+
   .message-input {
     height: 90px;
     line-height: 18px;
     padding: 3px 5px;
   }
-  
+
   input {
     padding-left: 5px;
   }
-  
+
   .send-button {
     background: rgb(189, 166, 93);
     background: linear-gradient(
@@ -729,7 +729,7 @@ input {
 }
 
 .link-position {
-  margin: auto -65px;
+  margin: 125px -45px;
   z-index: 2;
   filter: drop-shadow(2px 2px 1px #000);
 }
@@ -741,6 +741,7 @@ input {
 
 .project-container {
   width: 88vw;
+  height: 400px;
   border-radius: 15px;
   border: 4px solid var(--light-accent);
   transform: skew(0deg);
@@ -750,11 +751,12 @@ input {
   color: var(--light-accent);
   text-align: center;
   font-size: 26px;
-  margin: 15px;
+  margin: 25px;
 }
 
 .project-image {
   width: 100%;
+  height: 100%;
   border: 1px solid var(--light-color);
   border-radius: 5px;
 }
@@ -791,26 +793,29 @@ input {
 
 .project-description {
   position: absolute;
-  font-size: 20px;
   color: var(--light-color);
   padding: 30px;
   text-align: justify;
+  top: 180px;
+  font-size: 13px;
 }
 
 .project-description-two {
   position: absolute;
-  font-size: 20px;
   color: var(--light-color);
   padding: 30px;
   text-align: justify;
+  top: 180px;
+  font-size: 13px;
 }
 
 .project-description-three {
   position: absolute;
-  font-size: 20px;
   color: var(--light-color);
   padding: 30px;
   text-align: justify;
+  top: 180px;
+  font-size: 13px;
 }
 
 .hyperlink {
@@ -822,36 +827,175 @@ a.hyperlink:hover {
   text-decoration: none;
 }
 
-@media (min-width: 1250px) {
-  .link-position {
-    margin: auto 80px;
+@media (min-width: 280px) {
+  .project-container {
+    width: 260px;
+    height: 410px;
   }
 
+  .project-title {
+    font-size: 22px;
+  }
+
+  .project-description {
+    top: 218px;
+    font-size: 13px;
+  }
+
+  .project-description-two {
+    top: 205px;
+    font-size: 12px;
+  }
+
+  .project-description-three {
+    top: 210px;
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 340px) {
   .project-container {
-    transform: skew(-7deg);
+    width: 320px;
+    height: 480px;
+  }
+
+  .link-position {
+    margin: 141px -45px;
+  }
+
+  .project-description {
+    top: 260px;
+    font-size: 16px;
+  }
+
+  .project-description-two {
+    top: 245px;
+    font-size: 15px;
+  }
+
+  .project-description-three {
+    top: 250px;
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 400px) {
+  .project-container {
+    width: 350px;
+    height: 500px;
+  }
+
+  .project-title {
+    font-size: 25px;
+  }
+
+  .link-position {
+    margin: 148px -45px;
+  }
+
+  .project-description {
+    top: 268px;
+    font-size: 18px;
+  }
+
+  .project-description-two {
+    top: 251px;
+    font-size: 17px;
+  }
+
+  .project-description-three {
+    top: 258px;
+    font-size: 17px;
+  }
+}
+
+@media (min-width: 550px) {
+  .project-container {
+    width: 500px;
+    height: 500px;
+  }
+
+  .link-position {
+    margin: 168px -45px;
+  }
+
+  .project-title {
+    margin: 15px;
+  }
+
+  .project-description {
+    top: 295px;
+    font-size: 20px;
+  }
+
+  .project-description-two {
+    top: 291px;
+    font-size: 19px;
+  }
+
+  .project-description-three {
+    top: 290px;
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 750px) {
+  .project-container {
+    width: 600px;
+    height: 540px;
+  }
+
+  .project-title {
+    font-size: 30px;
+  }
+
+  .link-position {
+    margin: 188px -45px;
+  }
+
+  .project-description {
+    top: 355px;
+  }
+
+  .project-description-two {
+    top: 343px;
+    font-size: 20px;
+  }
+
+  .project-description-three {
+    top: 345px;
   }
 }
 
 @media (min-width: 992px) {
-  .project-image {
-    width: 100%;
-    height: 100%;
-  }
-
   .project-container {
     width: 800px;
     height: 600px;
   }
 
+  .link-position {
+    margin: 235px -45px;
+  }
+
   .project-description {
     top: 455px;
   }
-  
+
   .project-description-two {
     top: 443px;
   }
-  
+
   .project-description-three {
     top: 435px;
+  }
+}
+
+@media (min-width: 1250px) {
+  .link-position {
+    margin: 230px 80px;
+  }
+
+  .project-container {
+    transform: skew(-7deg);
   }
 }
